<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/ic_person_add_24dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp">
        <ImageView
            android:id="@+id/imper"
            android:src="@drawable/ic_person_24"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/none"
            android:contentDescription="@string/app_name" />
        <EditText
            android:id="@+id/new_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/name_hint"
            tools:ignore="Autofill" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp">
        <ImageView
            android:id="@+id/imnum"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_call_24dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/none"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/new_num"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/num_hint"
            tools:ignore="Autofill" />
    </RelativeLayout>

</LinearLayout>